Fix comment wrapping

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -533,7 +533,7 @@
   .media-body {
     font-size: 14px;
     .comment-body {
-      @include word-break(all);
+      @include word-break();
       margin-bottom: 0;
       display: inline;
       @if $theme == 'kitsu-dark' {
